# Audio_QA

./: .gitignore  Dockerfile  audio_prepocess.py  deepgram_analytics.py  deepgrams.py  docker-compose.yml  main.py  parser.py  prompts.py  pyproject.toml
ignore_folder/: output.csv  output.json
